# my-ime.el

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  skk-prompt.md
data/: chatgpt.skk  claude.skk  from-perplexity.skk  my-ime-tech.skk
emacs/: my-ime.el
scripts/: extract-me-terms.py  install-kkc-runtime.py
server/: __init__.py  app.py  config.py  converter.py  dictionary.py  kkc_client.py  protection.py  romanizer.py  stdio_app.py
tests/: test_app.py  test_converter.py  test_dictionary.py  test_kkc_backend.py  test_my_ime_elisp.el  test_protection.py  test_romanizer.py  test_runtime_windows.py  test_stdio_app.py
